external-crates/move/move-compiler/tests/move_check/warning_suppression/bad_attr.exp
error[E10003]: invalid attribute value
  ┌─ tests/move_check/warning_suppression/bad_attr.move:3:3
  │
3 │ #[allow(all(), unused = true, unused_(assignment, variable))]
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unknown warning filter 'unused_'

error[E10003]: invalid attribute value
  ┌─ tests/move_check/warning_suppression/bad_attr.move:3:9
  │
3 │ #[allow(all(), unused = true, unused_(assignment, variable))]
  │         ^^^ Expected a stand alone warning filter identifier, e.g. 'allow(all)'

error[E10003]: invalid attribute value
  ┌─ tests/move_check/warning_suppression/bad_attr.move:3:16
  │
3 │ #[allow(all(), unused = true, unused_(assignment, variable))]
  │                ^^^^^^ Expected a stand alone warning filter identifier, e.g. 'allow(unused)'

error[E10003]: invalid attribute value
  ┌─ tests/move_check/warning_suppression/bad_attr.move:3:31
  │
3 │ #[allow(all(), unused = true, unused_(assignment, variable))]
  │                               ^^^^^^^ Expected a stand alone warning filter identifier, e.g. 'allow(unused_)'

