external-crates/move/move-compiler/tests/move_check/warning_suppression/bad_attr.move
// tests an incorrect attribute for warning supression

#[allow(all(), unused = true, unused_(assignment, variable))]
module 0x42::m {
}
